<resources>
    <string name="app_name">Saath</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="User_id">2020UGPI***</string>
    <string name="User_Name">xyz abc</string>
    <string name="User_Type">Student</string>
    <string name="New_Complain">New Complain</string>
    <string name="My_Complains">My Complains</string>
    <string name="Track">Track a Complain</string>
    <string name="ragging">Anti Ragging Cell</string>
    <string name="pagal">Consult a Psychiatrist</string>
    <string name="mujhe_link_do">xyzabcpqr.com</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="aac">c</string>
    <string name="c">c</string>
    <string name="v">c</string>
    <string name="ca">c</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>