<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- User dp lagayein-->
    <ImageView
        android:id="@+id/User_DP"

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/ic_user" />

    <!-- User name lagayein-->
    <TextView
        android:id="@+id/User_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/User_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <!-- User email/reg. no. lagayein-->
    <TextView
        android:id="@+id/User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_Name" />

    <!-- User type lagayein-->
    <TextView
        android:id="@+id/User_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_Type" />
</LinearLayout>